--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 APP_PORT=3000
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=sebastien
+DB_USER=root
 DB_PASSWORD=REPLACE_WITH_YOUR_PASSWORD
 DB_NAME=express_quests
